--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .header-stone{
     height: 180px;
+    background-color: RGBA(177,183,219, 0.5);
 }
 .logo{
     width: 30%;
@@ -15,6 +16,18 @@
     padding-left: 0px !important;
     padding-right: 0px !important;
     margin-bottom: 20px;
+}
+i{
+    font-size: 5rem;
+    font-weight: 800;
+    text-align: center;
+}
+.card-title{
+    font-weight: 800;
+    text-align: center;
+}
+.card-text{
+    text-align: center;
 }
 .navbar {
     position:relative;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-ms-flex-align:center;align-items:center;-ms-flex-pack:justify;justify-content:space-between;padding:.5rem 1rem
@@ -39,7 +52,7 @@
 }
 
 .bg-dark {
-    background-color:#343a40!important
+    background-color:RGB(177,183,219)!important
 }
 
 
@@ -84,7 +97,13 @@
 .dropdown-item {
     display:block;width:100%;padding:.25rem 1.5rem;clear:both;font-weight:400;color:#212529;text-align:inherit;white-space:nowrap;background-color:transparent;border:0
 }
-
+li i, a i{
+    font-size: 1.2rem;
+    color: #fff;
+    list-style: none;
+    margin-right: 10px;
+    margin-top: -2px;
+}
 
 
 .mt-sm-0,.my-sm-0 {
@@ -158,4 +177,66 @@ img {
     -ms-flex:0 0 33.333333%;
     flex:0 0 33.333333%;
     max-width:33.333333%;
+}
+.footer-site{
+margin-top: 25px;
+padding-top: 15px;
+padding-bottom: 20px;
+background-color: RGB(177,183,219);
+}
+
+/* Portfolio CSS */
+
+.col-3 img {
+    opacity: 0.8;
+    cursor: pointer;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 0px 0px;
+    margin-bottom: 15px;
+}
+
+.col-3 img:hover {
+    opacity: 1;
+}
+.portfolio-page{
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+
+}
+.row-portfolio:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.container-img {
+    position: relative;
+    display: none;
+    text-align: center;
+}
+    
+
+#imgtext {
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    color: white;
+    font-size: 20px;
+}
+    
+.closebtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: #000;
+    font-size: 35px;
+    cursor: pointer;
+}
+#expandedImg{
+    width: 400px;
+    height: auto;
+    text-align: center;
 }
